# wit-bindgen

./: Cargo.toml  README.md
crates/scala/: Cargo.toml  README.md
crates/scala/src/: annotations.rs  context.rs  interface.rs  lib.rs  resource.rs  world.rs
crates/scala/tests/: annotations.rs  codegen.rs  context.rs  interface.rs  resource.rs  world.rs
